--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="quote">"Mỗi món quà <br>là sự trau chuốt tỉ mỉ nhất của Mẹ."</div>
             <div class="header-menu">
                 <ul>
-                    <li><a href="homepage.html">Trang chủ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="product-catalog.html">Sản phẩm</a></li>
                     <li><a href="contact.html">Liên hệ</a> </li>
