--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         </div>
         <div class="contact-main">
             <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
-            <div class="shopinf"><h4>QUÀ TẶNG MẸ LÀM</h4><br>
+            <div class="shopinf" style='width:90%;'><h4>QUÀ TẶNG MẸ LÀM</h4><br>
             <span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliton igituenim et bene longam et satis litigiosam disputationem. Immo videri fortasse. </p>
                 <p>Ne amores quidem sanctos a sapiente alienos esse arbitrantur. At modo dixeras nihil in istis rebus esse, quod interesset. Duo Reges: constructio interrete. At iam decimum annum in spelunca iacet. Quo tandem modo? Mene ergo et Triarium dignos existimas, apud quos turpiter loquare? Vide, quantum, inquam, fallare, Torquate. </p>
