--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
                     </svg></span><span style="display:inline-block;padding:2px 3px">Photo by Wyatt Ryan</span></a>
             <div class="header-img">
-                <img src="logo-transparent2.png" width="auto" height="100%" />
+                <img src="Logo-transparent2.png" width="auto" height="100%" />
             </div>
             <div class="quote">"Mỗi món quà <br>là sự trau chuốt tỉ mỉ nhất của Mẹ."</div>
             <div class="header-menu">
