--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <img class="menu-background" src="wyatt-ryan-348178-unsplash.jpg"/>
         <div class="contact-header">
             <div class="header-img">
-                <img src="Logo-transparent2.png"
+                <img src="logo-transparent2.png"
                      widht="auto" height="100%"/>
             </div>
             <div class="header-menu">
