--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-2.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>HCTU1-Hoa Cát Tường<br>149.000 VNĐ</span>
+                        <spanHoa Cát Tường - HCTU1<br>149.000 VNĐ</span>
 
                     </div>
                     <div class="product">
@@ -90,7 +90,7 @@
                             <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-2.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-3.jpg" width="auto" height="100%"  />
                         </div>
-                        <span>Lan Nữ Hoàng<br>129.000 VNĐ</span>
+                        <span>Lan Nữ Hoàng - HLA4<br>119.000 VNĐ</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-1.jpg" width="100%" height="auto" /> 
@@ -101,7 +101,7 @@
                             <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-3.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nữ Hoàng<br>129.000 VNĐ</span>
+                        <span>Lan Nữ Hoàng - HLA15<br>119.000 VNĐ</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-1.jpg" width="100%" height="auto" /> 
@@ -112,7 +112,7 @@
                             <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-3.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Dạ Lan Hương<br>129.000 VNĐ</span>
+                        <span>Hoa Dạ Lan Hương - HLA14<br>129.000 VNĐ</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-1.jpg" width="100%" height="auto" /> 
@@ -122,7 +122,7 @@
                             <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-2.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nam Phi<br>1329.000 VNĐ</span>
+                        <span>Lan Nam Phi - HLA12<br>129.000 VNĐ</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="100%" height="auto" /> </div>
@@ -130,7 +130,7 @@
                             <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-2.jpg"width="auto" height="100%"  />
                         </div>
-                        <span>Lay Ơn<br>129.000 VNĐ</span>
+                        <span>Lay Ơn Nhỏ - HLO2<br>139.000 VNĐ</span>
                     </div>
 
                 </div>
