--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                         </svg></span><span style="display:inline-block;padding:2px 3px">Christian Widell</span></a>
                 <div class="mid-quote-box">
                     <div class="mid-quote">"Mỗi một bông hoa là một lời gửi gắm tình yêu thương ngọt ngào nhất."</div>
-                </div><img class="mid-quote-img" src="christian-widell-93945-unsplash.jpg" />
+                </div>
+                <img class="mid-quote-img" src="christian-widell-93945-unsplash2.jpg" />
+                <img class="mid-quote-img" src="christian-widell-93945-unsplash.jpg" />
             </div>
             <div class="homeproduct">
                 <span class="product-title">Sản phẩm mới nhất</span>
