--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-2.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <spanHoa Cát Tường - HCTU1<br>149.000 VNĐ</span>
+                        <span>Hoa Cát Tường - HCTU1<br>149.000 VNĐ</span>
 
                     </div>
                     <div class="product">
