--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
 
 <body>
     <div class="wrapper">
+        <img class="background" src="wyatt-ryan-348178-unsplash2.jpg"/>
+        <img class="menu-background" src="wyatt-ryan-348178-unsplash2.jpg"/>
         <img class="background" src="wyatt-ryan-348178-unsplash.jpg"/>
         <img class="menu-background" src="wyatt-ryan-348178-unsplash.jpg"/>
         <div class="contact-header">
