--- a/about.html
+++ b/about.html
@@ -51,5 +51,6 @@
         <div class="homefooter">
             <div class="copyright">| All right reserved. © 2019 | Powered by TTTT |</div>
         </div>
+        <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
     </div>
 </body></html>
