--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <p>Ne amores quidem sanctos a sapiente alienos esse arbitrantur. At modo dixeras nihil in istis rebus esse, quod interesset. Duo Reges: constructio interrete. At iam decimum annum in spelunca iacet. Quo tandem modo? Mene ergo et Triarium dignos existimas, apud quos turpiter loquare? Vide, quantum, inquam, fallare, Torquate. </p>
                 <p>Audeo dicere, inquit.m facinus esse potuerit, gaudebit; Quamquam te quidem video minime esse deterritum. Haec bene dicuntur, nec ego repugno, sed inter sese ipsa pugnant. </p>
                 
-                </span><br><img src="christian-widell-93945-unsplash.jpg" width="1000px" height='auto' style=''/></div>
+                </span><br><img src="christian-widell-93945-unsplash.jpg" width="90%" height='auto' style='max-width:1000px;'/></div>
             
         </div>
         <div class="homefooter">
