--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <div class="homemain">
             <div style="font-size: 2em;  width: 100%;  max-width: 1200px;  height: 2em;  padding-top: 20px;padding-bottom: 20px;                        text-align: center">Bộ Sưu Tập</div>
             <div class="catalog">
-                <div class="catalog-img"><a href="product-catalog.html#lan"><img src="nhhoa/BoSuuTap/HoaLanBST.png" style="background-color: white;" width="100%" height="auto" />
+                <div class="catalog-img"><a href="product-catalog.html#lancheck"><img src="nhhoa/BoSuuTap/HoaLanBST.png" style="background-color: white;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Lan</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#hong"><img src="nhhoa/BoSuuTap/HoaHongBST.jpg" width="100%" height="auto" />
+                <div class="catalog-img"><a href="product-catalog.html#hongcheck"><img src="nhhoa/BoSuuTap/HoaHongBST.jpg" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Hồng</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#sen"><img src="nhhoa/BoSuuTap/HoaSenBST.png" style="background-color:#ffeb93 ;" width="100%" height="auto" />
+                <div class="catalog-img"><a href="product-catalog.html#sencheck"><img src="nhhoa/BoSuuTap/HoaSenBST.png" style="background-color:#ffeb93 ;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Sen</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#dai"><img src="nhhoa/BoSuuTap/HoaDaiBST.png" style="background-color:#ffeb93 ;" width="100%" height="auto" />
+                <div class="catalog-img"><a href="product-catalog.html#daicheck"><img src="nhhoa/BoSuuTap/HoaDaiBST.png" style="background-color:#ffeb93 ;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Dại</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#khac"><img src="nhhoa/BoSuuTap/HoaKhacBST.jpg" width="100%" height="auto" />
+                <div class="catalog-img"><a href="product-catalog.html#khaccheck"><img src="nhhoa/BoSuuTap/HoaKhacBST.jpg" width="100%" height="auto" />
                         <div class="catalog-title">Các Hoa Khác</div>
                     </a></div>
             </div>
