--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-2.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Cát Tường - HCTU1<br>149.000 VNĐ</span>
+                        <span>Hoa Cát Tường - HCTU1<br>40.000 VNĐ/Cành</span>
 
                     </div>
                     <div class="product">
@@ -93,7 +93,7 @@
                             <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-2.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-3.jpg" width="auto" height="100%"  />
                         </div>
-                        <span>Lan Nữ Hoàng - HLA4<br>119.000 VNĐ</span>
+                        <span>Lan Nữ Hoàng - HLA4<br>119.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-1.jpg" width="100%" height="auto" /> 
@@ -104,7 +104,7 @@
                             <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-3.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nữ Hoàng - HLA15<br>119.000 VNĐ</span>
+                        <span>Lan Nữ Hoàng - HLA15<br>119.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-1.jpg" width="100%" height="auto" /> 
@@ -115,7 +115,7 @@
                             <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-3.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Dạ Lan Hương - HLA14<br>129.000 VNĐ</span>
+                        <span>Dạ Lan Hương - HLA14<br>129.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-1.jpg" width="100%" height="auto" /> 
@@ -125,7 +125,7 @@
                             <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-2.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nam Phi - HLA12<br>129.000 VNĐ</span>
+                        <span>Lan Nam Phi - HLA12<br>129.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="100%" height="auto" /> </div>
@@ -133,7 +133,7 @@
                             <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="auto" height="100%"  />
                             <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-2.jpg"width="auto" height="100%"  />
                         </div>
-                        <span>Lay Ơn Nhỏ - HLO2<br>139.000 VNĐ</span>
+                        <span>Lay Ơn Nhỏ - HLO2<br>139.000 VNĐ/Chậu</span>
                     </div>
 
                 </div>
