--- a/product-catalog.html
+++ b/product-catalog.html
@@ -227,7 +227,7 @@
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
-                        <span><strong>Hoa Hồng Vàng</strong>g<br>- HHO2 -<br>12.000 VNĐ/Cành</span>
+                        <span><strong>Hoa Hồng Vàng</strong><br>- HHO2 -<br>12.000 VNĐ/Cành</span>
                     </div>
 
 
