--- a/product-catalog.html
+++ b/product-catalog.html
@@ -67,6 +67,9 @@
             <div class='filter-show'><i class='material-icons'>keyboard_arrow_right</i></div>
             <div class="sub-wrapper">
                 <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
+                <div class="search"><i class="material-icons" style="vertical-align:center; padding:10px; background: gray;color:white;">search</i>
+                    <input type="text" id="searchinput"  placeholder=" Tìm kiếm sản phẩm.." title="Nhập vào tên/code sản phẩm">
+                </div>
                 <div id="change-title">Tất cả sản phẩm</div>
                 <div class="catalog-product">
                     <div class="product-inf hoakhac">
