--- a/about.html
+++ b/about.html
@@ -41,9 +41,10 @@
             <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
             <div class="shopinf" style='width:90%;'><h4>QUÀ TẶNG MẸ LÀM</h4><br>
             <span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliton igituenim et bene longam et satis litigiosam disputationem. Immo videri fortasse. </p>
-                <p>Ne amores quidem sanctos a sapiente alienos esse arbitrantur. At modo dixeras nihil in istis rebus esse, quod interesset. Duo Reges: constructio interrete. At iam decimum annum in spelunca iacet. Quo tandem modo? Mene ergo et Triarium dignos existimas, apud quos turpiter loquare? Vide, quantum, inquam, fallare, Torquate. </p>
-                <p>Audeo dicere, inquit.m facinus esse potuerit, gaudebit; Quamquam te quidem video minime esse deterritum. Haec bene dicuntur, nec ego repugno, sed inter sese ipsa pugnant. </p>
+                <p>Từ đam mê làm hoa bằng vải voan, học hỏi trên các trang mạng, Mẹ đã sáng tạo, tìm tòi và biến đam mê của mình thành những sản phẩm tuyệt đẹp.<br>Chúng tôi mong muốn mỗi một chậu hoa sẽ là một món quà ý nghĩa nhất, tỉ mỉ nhất
+                từ Mẹ<br>
+                Rất mong sẽ nhận được nhiều và nhiều hơn nữa sự ủng hộ của quý khách dành cho các sản phẩm của chúng tôi để Mẹ có thêm động lực sáng tạo ra thêm thật nhiều món quà đẹp hơn từ vải voan.<br>
+                Xin trân trọng cảm ơn!</p>
                 
                 </span><br><img src="christian-widell-93945-unsplash.jpg" width="90%" height='auto' style='max-width:1000px;'/></div>
             
