--- a/about.html
+++ b/about.html
@@ -18,14 +18,13 @@
 
 <body>
     <div class="wrapper">
-        <img class="background" src="wyatt-ryan-348178-unsplash2.jpg"/>
-        <img class="menu-background" src="wyatt-ryan-348178-unsplash2.jpg"/>
-        <img class="background" src="wyatt-ryan-348178-unsplash.jpg"/>
-        <img class="menu-background" src="wyatt-ryan-348178-unsplash.jpg"/>
+        <img class="background" src="wyatt-ryan-348178-unsplash2.jpg" />
+        <img class="menu-background" src="wyatt-ryan-348178-unsplash2.jpg" />
+        <img class="background" src="wyatt-ryan-348178-unsplash.jpg" />
+        <img class="menu-background" src="wyatt-ryan-348178-unsplash.jpg" />
         <div class="contact-header">
             <div class="header-img">
-                <img src="logo-transparent2.png"
-                     widht="auto" height="100%"/>
+                <img src="logo-transparent2.png" widht="auto" height="100%" />
             </div>
             <div class="header-menu">
                 <ul>
@@ -39,19 +38,25 @@
         </div>
         <div class="contact-main">
             <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
-            <div class="shopinf" style='width:90%;'><h4>QUÀ TẶNG MẸ LÀM</h4><br>
-            <span>
-                <p>Từ đam mê làm hoa bằng vải voan, học hỏi trên các trang mạng, Mẹ đã sáng tạo, tìm tòi và biến đam mê của mình thành những sản phẩm tuyệt đẹp.<br>Chúng tôi mong muốn mỗi một chậu hoa sẽ là một món quà ý nghĩa nhất, tỉ mỉ nhất
-                từ Mẹ<br>
-                Rất mong sẽ nhận được nhiều và nhiều hơn nữa sự ủng hộ của quý khách dành cho các sản phẩm của chúng tôi để Mẹ có thêm động lực sáng tạo ra thêm thật nhiều món quà đẹp hơn từ vải voan.<br>
-                Xin trân trọng cảm ơn!</p>
-                
-                </span><br><img src="christian-widell-93945-unsplash.jpg" width="90%" height='auto' style='max-width:1000px;'/></div>
-            
+            <div class="shopinf" style='width:90%;'>
+                <h4>QUÀ TẶNG MẸ LÀM</h4><br>
+                <span>
+                    <p>Từ đam mê làm hoa bằng vải voan, học hỏi trên các trang mạng, Mẹ đã sáng tạo, tìm tòi và biến đam mê của mình thành những sản phẩm tuyệt đẹp.<p>Chúng tôi tin rằng mỗi một chậu hoa sẽ là một món quà ý nghĩa nhất, tỉ mỉ nhất
+                            của Mẹ.</p>
+                        <p>Rất mong sẽ nhận được nhiều và nhiều hơn nữa sự ủng hộ của quý khách dành cho các sản phẩm của chúng tôi để Mẹ có thêm động lực sáng tạo ra thêm thật nhiều món quà đẹp hơn từ vải voan.</p>
+                        <p>
+                            Xin trân trọng cảm ơn!</p>
+
+                </span><br><img src="christian-widell-93945-unsplash.jpg" width="100%" height='auto' style='max-width:1000px;' />
+            </div>
+
         </div>
         <div class="homefooter">
             <div class="copyright">| All right reserved. © 2019 | Powered by TTTT |</div>
         </div>
         <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
     </div>
-</body></html>
+</body>
+
+</html>
+
