--- a/product-catalog.html
+++ b/product-catalog.html
@@ -68,7 +68,7 @@
             <div class="sub-wrapper">
                 <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
                 <div class="search"><i class="material-icons" style="vertical-align:center; padding:10px; background: gray;color:white;">search</i>
-                    <input type="text" id="searchinput"  placeholder="Tìm kiếm sản phẩm.." title="Nhập vào tên/code sản phẩm">
+                    <input type="text" id="searchinput" placeholder="Tìm kiếm sản phẩm.." title="Nhập vào tên/code sản phẩm">
                 </div>
                 <div id="change-title">Tất cả sản phẩm</div>
                 <div class="catalog-product">
@@ -576,6 +576,67 @@
                         <span><strong>Hoa Thủy Vu</strong><br>- HTV1 -<br>169.000 VNĐ/Chậu</span>
                     </div>
 
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-4.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+                        <span><strong>Hoa Đào Bonsai</strong><br>- HDAO2 -<br>149.000 VNĐ/Chậu</span>
+                    </div>
+
+
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-3.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+                        <span><strong>Hoa Hồng Môn</strong><br>- HHM1 -<br>149.000 VNĐ/Chậu</span>
+                    </div>
+
+
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/HMD1-HoaMauDon/HMD1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-4.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+                        <span><strong>Hoa Mẫu Đơn</strong><br>- HMD1 -<br>199.000 VNĐ/Bình</span>
+                    </div>
+
+
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-3.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+                        <span><strong>Mãn Đình Hồng</strong><br>- HMDH1 -<br>149.000 VNĐ/Chậu</span>
+                    </div>
+
+
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-3.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+                        <span><strong>Nụ Tầm Xuân</strong><br>- NTX1 -<br>299.000 VNĐ/Chậu</span>
+                    </div>
+
 
                 </div>
             </div>
@@ -590,5 +651,5 @@
         </div>
         <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
     </div>
-</body>
-</html>
+</body></html>
+
