--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-1.jpg" width="100%" height="auto" style='margin-top: -30px;' />
                         </div>
-                        
+
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-1.jpg" width="auto" height="100%"  />
+                            <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-1.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-2.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-3.jpg" width="auto" height="100%" />
                         </div>
@@ -86,54 +86,55 @@
 
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-1.jpg" width="100%" height="auto" /> 
+                        <div class="img-container"><img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-1.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-2.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLA4-HoaLanNuHoang/HLA4-3.jpg" width="auto" height="100%"  />
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nữ Hoàng - HLA4<br>119.000 VNĐ/Chậu</span>
+                        <span>Mãn Đình Hồng - HMDH1<br>149.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-1.jpg" width="100%" height="auto" /> 
+                        <div class="img-container"><img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-1.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-3.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HLA15-HoaLanNuHoang/HLA15-4.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/NTX1-NuTamXuan/NTX1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nữ Hoàng - HLA15<br>119.000 VNĐ/Chậu</span>
+                        <span>Nụ Tầm Xuân - NTX1<br>299.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-1.jpg" width="100%" height="auto" /> 
+                        <div class="img-container"><img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-1.jpg" width="auto" height="100%" style='margin-top: -30px;' />
-                            <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-3.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLA14-HoaDaLanHuong/HLA14-4.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HDAO2-HoaDaoBonsai/HDAO2-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Dạ Lan Hương - HLA14<br>129.000 VNĐ/Chậu</span>
+                        <span>Hoa Đào Bonsai - HDAO2<br>149.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-1.jpg" width="100%" height="auto" /> 
+                        <div class="img-container"><img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-1.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-2.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLA12-HoaLanNamPhi/HLA12-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lan Nam Phi - HLA12<br>129.000 VNĐ/Chậu</span>
+                        <span>Hoa Hồng Môn - HHM1<br>149.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="100%" height="auto" /> </div>
+                        <div class="img-container"><img src="nhhoa/HMD1-HoaMauDon/HMD1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-1.jpg" width="auto" height="100%"  />
-                            <img src="nhhoa/HLO2-HoaLayOnNho/HLO2-2.jpg"width="auto" height="100%"  />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMD1-HoaMauDon/HMD1-4.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Lay Ơn Nhỏ - HLO2<br>139.000 VNĐ/Chậu</span>
+                        <span>Hoa Mẫu Đơn - HMD1<br>199.000 VNĐ/Bình</span>
                     </div>
 
                 </div>
@@ -150,6 +151,4 @@
         </div>
         <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
     </div>
-</body>
-
-</html>
+</body></html>
