--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <div class="showroom">
             <div class='close-button'><i class="material-icons" style="color: white;font-size: 40px;">close</i></div>
-            <div class="showroom-mainimg"><img src=# width="auto" height="100%" /></div>
+            <div class="showroom-mainimg"><img src=#/></div>
             <div class="showroom-subimg"><img src=# width="auto" height="100%" /><img src=# width="auto" height="100%" /><img src=# width="auto" height="100%" /><img src=# width="auto" height="100%" /></div>
         </div>
         <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
