--- a/product-catalog.html
+++ b/product-catalog.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta lang="vn">
+    <meta name="description" content="Shop Hoa Trang Trí Quà Tặng Mẹ Làm - Chuyên bán hoa voan, hoa vải trang trí; Nhận làm hoa theo yêu cầu; Có hàng ngay sau 3 ngày - Địa chỉ: 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú - Điện thoại: (028) 38162556" />
+    <title>Quà Tặng Mẹ Làm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
